--- a/index.html
+++ b/index.html
@@ -56,7 +56,20 @@
     <section id="about" class="active">
   <h1>About Me</h1>
   <p>
+    Hi, I’m Madhumitha! I’m an Economics enthusiast who loves exploring how ideas and numbers shape the world around us. 
+    From macro theories to digital shifts, I’m curious about the ways we can use knowledge to understand change and solve real problems.
   </p>
+
+  <p>
+    I enjoy working with data, not just for the numbers, but for the stories they tell. 
+    Whether it’s through Python, Power BI, or econometrics, I’m drawn to finding data-driven solutions that help make smarter, more impactful decisions. 
+    Beyond research and projects, dance is my creative outlet — it keeps me grounded, expressive, and balanced.
+  </p>
+
+  <p>
+    Right now, I’m looking for opportunities to learn, contribute, and grow — places where I can bring together analysis, curiosity, and creativity. 
+    If you’ve made it this far, thanks for stopping by — and maybe we’ll get to collaborate on something meaningful (and fun) soon!
+  </p> 
     </section>
     <section id="resume">
       <h2>Resume</h2>
