--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
   <div class="container">
     <section id="about" class="active">
   <h1>About Me</h1>
-  <img src="Profile.jpg" alt="Madhumitha Ramakrishnan" style="width:160px;border-radius:80px;margin-bottom:20px;">
+  <div style="text-align: center;">
+    <img src="Profile.jpg" alt="Madhumitha Ramakrishnan" style="width:200px; height:200px; object-fit:cover; border: 3px solid #ccc; margin-bottom: 20px; border-radius: 12px;">
+  </div>
   <p>
     Hi, I’m Madhumitha! I’m an Economics enthusiast who loves exploring how ideas and numbers shape the world around us. 
     From macro theories to digital shifts, I’m curious about the ways we can use knowledge to understand change and solve real problems.
