--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
     <h2>Education</h2>
     <ul>
       <li><strong>MSc Economics with Data Analytics</strong> — Symbiosis School of Economics, Pune — <em>GPA: 8.49/10</em></li>
-      <li><strong>BSc (Economics, Math, Stats)</strong> — Christ University, Central Campus, Bengaluru — <em>GPA: 8.42/10</em></li>
+      <li><strong>BSc (Economics, Mathematics, Statistics)</strong> — Christ University, Central Campus, Bengaluru — <em>GPA: 8.42/10</em></li>
     </ul>
-    
     <!-- Experience -->
     <h2>Experience</h2>
     <div style="margin-bottom: 18px;">
