--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
       <li>Equity Markets Analyst (Finlatics): Technical Analysis, Power BI, R, Excel</li>
     </ul>
   </div>
+  <div style="text-align:center; margin-bottom: 20px;">
+  <a href="CV_Madhu.pdf" download style="font-size:18px; color: #0a66c2; text-decoration:none; border:1px solid #0a66c2; padding:8px 16px; border-radius:6px;">
+    &#128190; Download My Resume (PDF)
+  </a>
+</div>
 </section>
     <section id="achievements">
       <h2>Achievements</h2>
