--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <nav>
     <a href="#" class="active" onclick="showSection('about'); return false;">About Me</a>
     <a href="#" onclick="showSection('resume'); return false;">Resume</a>
-    <a href="#" onclick="showSection('achievements'); return false;">Achievements</a>
-    <a href="#" onclick="showSection('projects'); return false;">Projects</a>
+    <a href="#" onclick="showSection('achievements'); return false;">Projects</a>
+    <a href="#" onclick="showSection('projects'); return false;">Contact Me</a>
   </nav>
   <div class="container">
     <section id="about" class="active">
