--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
     &#128190; Download My Resume (PDF)
   </a>
   </div>
+  <section id="projects">
+  <h1>Projects</h1>
+  <ul>
+    <li>
+      <strong>Microfinance Debt Traps and Household Spending</strong><br>
+      <a href="Microfinancing Thematic Analysis.pdf" download>Download Thematic Analysis (PDF)</a><br>
+      <a href="MicrofinanceDebtTrap_FullAnalysis.pdf" download>Download Full Analysis(PDF)</a>
+    </li>
+    <li>
+      <strong>Rural Economic Development in India (2000–2019)</strong><br>
+      <a href="RuralEconomicDevelopment.docx" download>Download Report (Word)</a>
+    </li>
+    <li>
+      <strong>Impact of Instant Grocery Delivery on Household Budgeting</strong><br>
+      <a href="InstantDelivery_Analysis.Rmd" download>Download R Analysis (Rmd)</a><br>
+      <a href="InstantDelivery_PowerBI.pbix" download>Download Power BI Dashboard (PBIX)</a><br>
+      <a href="InstantDelivery_Report.pdf" download>Download Report (PDF)</a>
+    </li>
+  </ul>
+</section>
+
   <script>
     function showSection(id) {
       document.querySelectorAll('nav a').forEach(link => link.classList.remove('active'));
