--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     &#128190; Download My Resume (PDF)
   </a>
   </div>
+    </section>
   <section id="projects">
   <h1>Projects</h1>
   <ul>
