--- a/index.html
+++ b/index.html
@@ -168,7 +168,23 @@
     </li>
   </ul>
 </section>
-
+<section id="contact">
+  <h1>Contact Me</h1>
+  <p>You can reach me at:</p>
+  <ul style="list-style: none; padding: 0;">
+    <li>
+      <strong>Email:</strong>
+      <a href="mailto:your.email@example.com" style="color: #0a66c2;">your.email@example.com</a>
+    </li>
+    <li>
+      <strong>LinkedIn:</strong>
+      <a href="https://www.linkedin.com/in/madhumitha-ramakrishnan-130588257" target="_blank" style="color: #0a66c2;">
+        linkedin.com/in/madhumitha-ramakrishnan-130588257
+      </a>
+    </li>
+  </ul>
+  <p>Looking forward to connecting with you!</p>
+</section>
   <script>
     function showSection(id) {
       document.querySelectorAll('nav a').forEach(link => link.classList.remove('active'));
