--- a/index.html
+++ b/index.html
@@ -173,8 +173,12 @@
   <p>You can reach me at:</p>
   <ul style="list-style: none; padding: 0;">
     <li>
+      <strong>Phone:</strong>
+      <a href="tel:+91-7975289110" style="color: #0a66c2;">+91-XXXXXXXXXX</a>
+    </li>
+    <li>
       <strong>Email:</strong>
-      <a href="mailto:your.email@example.com" style="color: #0a66c2;">your.email@example.com</a>
+      <a href="mailto:your.email@example.com" style="color: #0a66c2;">madhu74mitha@gmail.com</a>
     </li>
     <li>
       <strong>LinkedIn:</strong>
