--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <ul style="list-style: none; padding: 0;">
     <li>
       <strong>Phone:</strong>
-      <a href="tel:+91-7975289110" style="color: #0a66c2;">+91-XXXXXXXXXX</a>
+      <a href="tel:+91-7975289110" style="color: #0a66c2;">+91-7975289110</a>
     </li>
     <li>
       <strong>Email:</strong>
